[gd_scene load_steps=6 format=3 uid="uid://cuukulrj5n7ge"]

[ext_resource type="Script" path="res://scripts/player_customizer.gd" id="1_k1m62"]
[ext_resource type="Material" uid="uid://cxrb5fdf0l11j" path="res://player/player_shader.tres" id="2_ldf7a"]
[ext_resource type="Texture2D" uid="uid://bbdlxty5q5hou" path="res://addons/player/player_idle.png" id="3_doxsi"]
[ext_resource type="FontFile" uid="uid://wlpg7r5avxq4" path="res://addons/fonts/Perfect DOS VGA 437.ttf" id="4_4ita6"]

[sub_resource type="LabelSettings" id="LabelSettings_fxi2a"]
font = ExtResource("4_4ita6")
font_size = 100

[node name="PlayerCustomizer" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_k1m62")

[node name="ColorPicker" type="ColorPicker" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -464.0
offset_top = -196.0
offset_right = -166.0
offset_bottom = 380.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)

[node name="Container" type="AspectRatioContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="Container"]
material = ExtResource("2_ldf7a")
position = Vector2(436, 0)
scale = Vector2(10, 10)
texture = ExtResource("3_doxsi")
hframes = 6
vframes = 4

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -281.5
offset_right = 281.5
offset_bottom = 100.0
grow_horizontal = 2
text = "Customizer"
label_settings = SubResource("LabelSettings_fxi2a")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -22.0
offset_right = 20.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="HairButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_4ita6")
theme_override_font_sizes/font_size = 50
text = "HAIR
"

[node name="ShirtButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_4ita6")
theme_override_font_sizes/font_size = 50
text = "SHIRT"

[node name="EmblemButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_4ita6")
theme_override_font_sizes/font_size = 50
text = "EMBLEM"

[node name="ShortButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_4ita6")
theme_override_font_sizes/font_size = 50
text = "SHORT"

[node name="ResetButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_4ita6")
theme_override_font_sizes/font_size = 50
text = "RESET"

[node name="BackButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -60.5
offset_top = -59.0
offset_right = 60.5
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_4ita6")
theme_override_font_sizes/font_size = 50
text = "BACK"

[connection signal="pressed" from="VBoxContainer/HairButton" to="." method="_on_hair_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ShirtButton" to="." method="_on_shirt_button_pressed"]
[connection signal="pressed" from="VBoxContainer/EmblemButton" to="." method="_on_emblem_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ShortButton" to="." method="_on_short_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
